Working on layout issue on mobile devices

--- a/src/App.css
+++ b/src/App.css
@@ -348,7 +348,7 @@ footer p {
 
 .result-wrapper {
   background-color: var(--bg-primary);
-  padding: .5em 1em;
+  padding: .5em;
   border-radius: .3em;
 }
 
